--- a/JAVA/ch01_basic/01.basic.html
+++ b/JAVA/ch01_basic/01.basic.html
@@ -6,6 +6,14 @@
     <title>Document</title>
 </head>
 <body>
+    <script>
+        let a = "Hello World!!";
+        a += "자바" + "스크립트";
+        document.write('<h1>' + a + '</h1>');
+
+        // a = a + "자바" + '스크립트'
+
     
+    </script>
 </body>
 </html>
