--- a/JAVA/ch15_응용/human/02.autoFocus_jq.html
+++ b/JAVA/ch15_응용/human/02.autoFocus_jq.html
@@ -3,28 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Auto Focus</title>
+    <title>주민등록번호 입력기(JQeuary)</title>
     <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
     <script>
-    /*
-        window.onload = function() {
-            let input1 = document.querySelectorAll('input')[0];
-            let input2 = document.querySelectorAll('input')[1];
-
-            input1.onkeyup = function(e) {
-                if (input1.value.length >= 6)
-                    input2.focus();
-            }
-            input2.onkeyup = function(e) {
-                if (e.keyCode == 8 && input2.value.length == 0)     // 입력한 글자가 없고, 백스페이스를 쳤을때
-                    input1.focus();
-            }
-        }
-    */
-        $(document).ready(() => {
-            // let input1 = $('input').get(0);
-            // let input2 = $('input').get(1);
-
+           $(document).ready(() => {
             $('#input1').on('keyup', function(e) {
                 if ($(this).val().length >= 6)
                     $('#input2').focus();
@@ -37,7 +19,7 @@
     </script>
 </head>
 <body style="margin: 50px;">
-    주민등록번호: <input id="input1" type="text" maxlength="6" autofocus>
+    주민등록번호 : <input id="input1" type="text" maxlength="6" autofocus>
     <span>-</span>
     <input id="input2" type="text" maxlength="7">
 </body>
